// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Track /> renders correctly with grains 1`] = `
<div
  className="track"
  id="track-123ABC"
>
  <TrackControls
    id="123ABC"
    name="test.wav"
  />
  <div
    className="display"
  >
    
    <div
      className="seek-line"
      style={
        Object {
          "left": "50%",
        }
      }
    />
    <Waveform
      grainTags={
        Array [
          Object {
            "quiet": true,
          },
          Object {
            "quiet": false,
          },
        ]
      }
      grains={undefined}
      maxAmplitude={0}
      selected={true}
      setSeekPosition={undefined}
      view={
        Object {
          "end": 20,
          "start": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`<Track /> renders correctly with no grains 1`] = `
<div
  className="track"
  id="track-123ABC"
>
  <TrackControls
    id="123ABC"
    name={undefined}
  />
  <div
    className="display"
  >
    <div
      className="loading"
      id="loading"
    >
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
      <div
        className="bar"
      />
    </div>
    <div
      className="seek-line"
      style={
        Object {
          "left": "50%",
        }
      }
    />
    <Waveform
      grainTags={
        Array [
          Object {
            "quiet": true,
          },
          Object {
            "quiet": false,
          },
        ]
      }
      grains={undefined}
      maxAmplitude={0}
      selected={true}
      setSeekPosition={undefined}
      view={
        Object {
          "end": 20,
          "start": 0,
        }
      }
    />
  </div>
</div>
`;
